--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ beautifulsoup4==4.10.0
 bleach==4.1.0
 certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.4
 colorama==0.4.4
 cycler==0.11.0
 debugpy==1.5.1
@@ -14,14 +16,18 @@ decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
 executing==0.8.3
+Flask==2.0.3
 fonttools==4.30.0
+idna==3.3
 ipykernel==6.9.1
 ipython==8.1.1
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
+itsdangerous==2.1.1
 jedi==0.18.1
 Jinja2==3.0.3
 joblib==1.1.0
+jsonify==0.5
 jsonschema==4.4.0
 jupyter==1.0.0
 jupyter-client==7.1.2
@@ -55,11 +61,11 @@ pyparsing==3.0.7
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2021.3
-pywin32==303
 pywinpty==2.0.5
 pyzmq==22.3.0
 qtconsole==5.2.2
 QtPy==2.0.1
+requests==2.27.1
 scikit-learn==1.0.2
 scipy==1.8.0
 seaborn==0.11.2
@@ -73,7 +79,9 @@ testpath==0.6.0
 threadpoolctl==3.1.0
 tornado==6.1
 traitlets==5.1.1
+urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==2.0.3
 widgetsnbextension==3.5.2
 wincertstore==0.2
